Article align issue

--- a/talentum/dagensmedia/css/screen.css
+++ b/talentum/dagensmedia/css/screen.css
@@ -195,7 +195,7 @@ INPUT.submit:hover {
 .columns-1-1, .columns-1-2, .columns-3-1, .columns-2-1,
 .columns-1-1-1, .columns-1-1-1-1
 {
-    margin: 16px 0 0 0;
+    margin: 10px 0 0 0;
     overflow: hidden;
 }
 
